--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,78 @@
-<h1>Michaela</h1>
+<h1>Welcome to CSE Motors!</h1>
+<div id="hero-container">
+  <section id="ad-container">
+    <h2 id="ad-container-title">DMC Delorean</h2>
+    <ul>
+      <li>3 Cup holders</li>
+      <li>Superman doors</li>
+      <li>Fuzzy dice!</li>
+    </ul>
+    <img
+      alt="Own today button"
+      id="own-today-cta"
+      src="images/site/own_today.png"
+    />
+  </section>
+  <img
+    alt="Delorean image"
+    id="delorean-image"
+    src="images/vehicles/delorean.jpg"
+  />
+</div>
+<section class="delorean-details-container">
+  <section>
+    <h2>DMC Delorean Reviews</h2>
+    <ul>
+      <li>"So fast it's almost like traveling in time." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"I'm feeling McFly!" (5/5)</li>
+      <li>"The most furturistic ride of our day." (4.5/5)</li>
+      <li>"80's livin and love it!" (5/5)</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Delorean Upgrades</h2>
+    <div class="delorean-upgrades">
+      <div class="delorean-upgrade-item-container">
+        <div class="upgrades-images-container">
+          <img
+            alt="Flux Cap"
+            class="upgrades-images"
+            src="images/upgrades/flux-cap.png"
+          />
+        </div>
+        <p>Flux Capacitor</p>
+      </div>
+      <div class="delorean-upgrade-item-container">
+        <div class="upgrades-images-container">
+          <img
+            alt="Flame"
+            class="upgrades-images"
+            src="images/upgrades/flame.jpg"
+          />
+        </div>
+        <p>Flame Decals</p>
+      </div>
+      <div class="delorean-upgrade-item-container">
+        <div class="upgrades-images-container">
+          <img
+            alt="Bumper Sticker"
+            class="upgrades-images"
+            src="/images/upgrades/bumper_sticker.jpg"
+          />
+        </div>
+        <p>Bumper Stickers</p>
+      </div>
+      <div class="delorean-upgrade-item-container">
+        <div class="upgrades-images-container">
+          <img
+            alt="Hub Cap"
+            class="upgrades-images"
+            src="/images/upgrades/hub-cap.jpg"
+          />
+        </div>
+        <p>Hub Caps</p>
+      </div>
+    </div>
+  </section>
+</section>
