--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,145 @@
+@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans&family=Sofia+Sans+Extra+Condensed:wght@300&display=swap");
+
 /******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+* {
+  font-family: "Sofia Sans", sans-serif;
+}
+body {
+  background-image: url("../images/site/small_check.jpg");
+}
+#wrapper {
+  max-width: 800px;
+  background-color: #fff;
+  margin: auto;
+  border: 4px solid #4c96d7;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+#tools {
+  float: right;
+}
+
+#site-title {
+  font-size: 2em;
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
+#nav-menu {
+  background-color: #333;
+  color: #fff;
+}
+
+#nav-menu ul {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+#nav-menu li {
+  display: inline;
+  padding: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+  font-family: "Sofia Sans", sans-serif;
+}
+
+#nav-menu li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#nav-menu li a:hover {
+  color: #4c96d7;
+}
+
+#hero-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+#ad-container {
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 200px;
+  height: 200px;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  z-index: 2;
+  justify-self: center;
+  margin-top: 20px;
+  padding: 5px;
+  color: #4c96d7;
+}
+
+#ad-container ul {
+  list-style: none;
+  margin-left: -30px;
+}
+
+#own-today-cta {
+  max-width: 100px;
+}
+
+#delorean-image {
+  width: 350px;
+}
+
+#delorean-image {
+  grid-column: 1 / 4;
+  grid-row: 1 / 2;
+}
+
+.upgrades-images {
+  height: 50px;
+}
+.delorean-upgrades {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 400px;
+}
+
+.delorean-upgrade-item-container {
+  display: grid;
+  width: 200px;
+  justify-items: center;
+}
+
+.upgrades-images-container {
+  width: 150px;
+  margin: auto;
+  display: grid;
+  justify-items: center;
+  background-color: #4c96d7;
+}
+
+@media screen and (min-width: 600px) {
+  #delorean-image {
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .delorean-details-container {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  #delorean-image {
+    width: 650px;
+  }
+
+  #ad-button {
+    margin: auto;
+    display: block;
+  }
 }
