remove slashes from self closing tags

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,15 +11,15 @@
       alt="Own today button"
       id="own-today-cta"
       src="images/site/own_today.png"
-    />
+    >
   </section>
   <img
     alt="Delorean image"
     id="delorean-image"
     src="images/vehicles/delorean.jpg"
-  />
+    >
 </div>
-<section class="delorean-details-container">
+<div class="delorean-details-container">
   <section>
     <h2>DMC Delorean Reviews</h2>
     <ul>
@@ -39,7 +39,7 @@
             alt="Flux Cap"
             class="upgrades-images"
             src="images/upgrades/flux-cap.png"
-          />
+          >
         </div>
         <p>Flux Capacitor</p>
       </div>
@@ -49,7 +49,7 @@
             alt="Flame"
             class="upgrades-images"
             src="images/upgrades/flame.jpg"
-          />
+          >
         </div>
         <p>Flame Decals</p>
       </div>
@@ -59,7 +59,7 @@
             alt="Bumper Sticker"
             class="upgrades-images"
             src="/images/upgrades/bumper_sticker.jpg"
-          />
+          >
         </div>
         <p>Bumper Stickers</p>
       </div>
@@ -69,10 +69,10 @@
             alt="Hub Cap"
             class="upgrades-images"
             src="/images/upgrades/hub-cap.jpg"
-          />
+          >
         </div>
         <p>Hub Caps</p>
       </div>
     </div>
   </section>
-</section>
+</div>
