--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav id="nav-menu">
-  <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">Custom</a></li>
-    <li><a href="">Sedan</a></li>
-    <li><a href="">SUV</a></li>
-    <li><a href="">Truck</a></li>
-  </ul>
+<%- nav %>
 </nav>
