Activites for week 4

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
 <div id="hero-container">
   <section id="ad-container">
     <h2 id="ad-container-title">DMC Delorean</h2>
