--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -19,4 +19,4 @@
 
 <!-- Display body -->
 <div><a href="/inv/add-classification">Add new classification</a></div>
-<div><a href="/inv/add-vehicle">Add new vehicle</a></div>
+<div><a href="/inv/add-inventory">Add new vehicle</a></div>
