Update form validation

--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -34,9 +34,9 @@
         <label for="inv_thumbnail">Upload image:</label>
         <input type="text" name="inv_thumbnail" value="/images/vehicles/no-image-tn.png" required><br>
         <label for="inv_price">Price:</label>
-        <input type="text" name="inv_price" required><br>
+        <input type="number" name="inv_price" required><br>
         <label for="inv_miles">Miles:</label>
-        <input type="text" name="inv_miles" required><br>
+        <input type="number" name="inv_miles" required><br>
         <label for="inv_color">Color:</label>
         <input type="text" name="inv_color" required><br>
         <%- dropdown %>
