Made forms sticky, server side validation

--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -21,11 +21,11 @@
 <div>
 <form action="/account/register" method="post">
 <label for="account_firstname">First Name</label><br>
-<input type="text" id="account_firstname" name="account_firstname" required><br>
+<input type="text" name="account_firstname" id="accountFirstname" required value="<%= locals.account_firstname %>"><br>
 <label for="account_lastname">Last Name</label><br>
-<input type="text" id="account_lastname" name="account_lastname" required><br>
+<input type="text" id="account_lastname" name="account_lastname" required value="<%= locals.account_lastname %>"><br>
 <label for="account_email">Email</label><br>
-<input type="email" id="account_email" name="account_email" required placeholder="Enter a valid email"><br>
+<input type="email" id="account_email" name="account_email" required placeholder="Enter a valid email" value="<%= locals.account_email %>"><br>
 <label for="account_password">Password</label><br>
 <input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br>
 <div>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be a non-alphanumeric character.</div>
