--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -10,11 +10,11 @@
 
 <!-- Display login form -->
 <div>
-<form action="">
+<form id="loginForm" action="">
 <label for="account_email">Email</label><br>
-<input type="email" id="account_email" name="account_email" required><br>
+<input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>"><br>
 <label for="account_password">Password</label><br>
-<input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br>
+<input type="password" id="account_password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required><br>
 <div>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be a non-alphanumeric character.</div>
 <input type="submit" value="Login">
 </form>
