account login server side validation

--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -8,9 +8,18 @@
 <!-- Flash message -->
 <%- messages() %>
 
+<!-- Display registration errors -->
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
 <!-- Display login form -->
 <div>
-<form id="loginForm" action="">
+<form id="loginForm"  action="/account/login" method="post">
 <label for="account_email">Email</label><br>
 <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>"><br>
 <label for="account_password">Password</label><br>
