--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -22,23 +22,23 @@
 <div>
     <form action="/inv/process-add-inventory" method="post">
         <label for="inv_make">Make:</label>
-        <input type="text" name="inv_make" required value="<%= locals.inv_make %>"><br>
+        <input type="text" name="inv_make" id="inv_make" required value="<%= locals.inv_make %>"><br>
         <label for="inv_model">Model:</label>
-        <input type="text" name="inv_model" required value="<%= locals.inv_model %>"><br>
+        <input type="text" name="inv_model" id="inv_model" required value="<%= locals.inv_model %>"><br>
         <label for="inv_year">Year:</label>
-        <input type="text" name="inv_year" required value="<%= locals.inv_year %>"><br>
+        <input type="text" name="inv_year" id="inv_year" required value="<%= locals.inv_year %>"><br>
         <label for="inv_description">Description:</label><br>
-        <textarea name="inv_description" required value="<%= locals.inv_description %>"></textarea><br>
+        <textarea name="inv_description" id="inv_description" required value="<%= locals.inv_description %>"></textarea><br>
         <label for="inv_image">Upload image:</label>
-        <input type="text" name="inv_image" value="/images/vehicles/no-image.png" required value="<%= locals.inv_image %>"><br>
+        <input type="text" name="inv_image" id="inv_image" value="/images/vehicles/no-image.png" required value="<%= locals.inv_image %>"><br>
         <label for="inv_thumbnail">Upload image:</label>
-        <input type="text" name="inv_thumbnail" value="/images/vehicles/no-image-tn.png" required value="<%= locals.inv_thumbnail %>"><br>
+        <input type="text" name="inv_thumbnail" id="inv_thumbnail" value="/images/vehicles/no-image-tn.png" required value="<%= locals.inv_thumbnail %>"><br>
         <label for="inv_price">Price:</label>
-        <input type="number" name="inv_price" required required value="<%= locals.inv_price %>"><br>
+        <input type="number" name="inv_price" id="inv_price" required required value="<%= locals.inv_price %>"><br>
         <label for="inv_miles">Miles:</label>
-        <input type="number" name="inv_miles" required value="<%= locals.inv_miles %>"><br>
+        <input type="number" name="inv_miles" id="inv_miles" required value="<%= locals.inv_miles %>"><br>
         <label for="inv_color">Color:</label>
-        <input type="text" name="inv_color" required value="<%= locals.inv_color %>"><br>
+        <input type="text" name="inv_color" id="inv_color" required value="<%= locals.inv_color %>"><br>
         <%- dropdown %>
         <input type="submit" value="Submit">
      </form>   
