--- a/views/account/registration.ejs
+++ b/views/account/registration.ejs
@@ -21,7 +21,7 @@
 <div>
 <form action="/account/register" method="post">
 <label for="account_firstname">First Name</label><br>
-<input type="text" name="account_firstname" id="accountFirstname" required value="<%= locals.account_firstname %>"><br>
+<input type="text" name="account_firstname" id="account_firstname" required value="<%= locals.account_firstname %>"><br>
 <label for="account_lastname">Last Name</label><br>
 <input type="text" id="account_lastname" name="account_lastname" required value="<%= locals.account_lastname %>"><br>
 <label for="account_email">Email</label><br>
