--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -28,13 +28,13 @@
         <label for="inv_year">Year:</label>
         <input type="text" name="inv_year" id="inv_year" required value="<%= locals.inv_year %>"><br>
         <label for="inv_description">Description:</label><br>
-        <textarea name="inv_description" id="inv_description" required value="<%= locals.inv_description %>"></textarea><br>
+        <textarea name="inv_description" id="inv_description" required></textarea><br>
         <label for="inv_image">Upload image:</label>
-        <input type="text" name="inv_image" id="inv_image" value="/images/vehicles/no-image.png" required value="<%= locals.inv_image %>"><br>
+        <input type="text" name="inv_image" id="inv_image" value="/images/vehicles/no-image.png" required><br>
         <label for="inv_thumbnail">Upload image:</label>
-        <input type="text" name="inv_thumbnail" id="inv_thumbnail" value="/images/vehicles/no-image-tn.png" required value="<%= locals.inv_thumbnail %>"><br>
+        <input type="text" name="inv_thumbnail" id="inv_thumbnail" value="/images/vehicles/no-image-tn.png" required><br>
         <label for="inv_price">Price:</label>
-        <input type="number" name="inv_price" id="inv_price" required required value="<%= locals.inv_price %>"><br>
+        <input type="number" name="inv_price" id="inv_price"  required value="<%= locals.inv_price %>"><br>
         <label for="inv_miles">Miles:</label>
         <input type="number" name="inv_miles" id="inv_miles" required value="<%= locals.inv_miles %>"><br>
         <label for="inv_color">Color:</label>
