--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -41,5 +41,8 @@
         <input type="text" name="inv_color" id="inv_color" required value="<%= locals.inv_color %>"><br>
         <%- classificationSelect %>
         <input type="submit" name="submit" value="Update Vehicle">
+        <input type="hidden" name="inv_id"
+        <% if(locals.inv_id) { %> value="<%= locals.inv_id %>"
+        <% } %>>
      </form>   
     </div>
