Add intentional error

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,8 @@
   </span>
   <div id="tools">
     <a id="account-login" title="Click to log in" href="/account/login"
-      >My Account</a
-    >
+      >My Account</a>
+    <%- //loginMessage %>
+      
   </div>
 </header>
