Assignment 5, update account info

--- a/views/account/account-management.ejs
+++ b/views/account/account-management.ejs
@@ -18,5 +18,12 @@
 <% } %>
 
 <!-- Body -->
-<h2>Welcome Basic</h2>
+<h2>Welcome  <%=locals.accountData.account_firstname %></h2>
 <p>You're logged in!</p>
+
+<% if (locals.accountData.account_type == "Employee"|| locals.accountData.account_type == "Admin")
+{%>
+  <h3>Inventory Management</h3>
+  <p><a href="../inv/">Click here to view Inventory Management</a></p>
+<% } %>
+<p><a href="update-account/<%=locals.accountData.account_id%>">Update account information</a></p>
