--- a/views/account/update-account.ejs
+++ b/views/account/update-account.ejs
@@ -35,9 +35,9 @@
 
     <form id="updateForm2" action="/account/update-password" method="post">
       <label for="account_password">New password:</label>
-      <input type="text" name="inv_make" id="inv_make"><br>
-
-      <input id="submit" type="submit" name="submit" value="Update Password" disabled>
+      <input type="text" name="account_password" id="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"><br>
+      <div>There must be at least 12 characters, one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be a non-alphanumeric character.</div>
+      <input id="submit" type="submit" name="submit" value="Update Password">
       <input type="hidden" name="account_id"
       <% if(locals.account_id) { %> value="<%= locals.account_id %>"
       <% } %>>
