--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -17,15 +17,17 @@
  </ul>
 <% } %>
 
+<!-- custom body -->
+
+<p>Here!!!</p>
+
 <!-- Display body -->
-<div><a href="/inv/add-classification">Add new classification</a></div>
-<div><a href="/inv/add-inventory">Add new vehicle</a></div>
-<h2>Manage Inventory</h2>
-<p>Select a classification from the list below to see the items belonging to the classification.</p>
-<%- classificationSelect %>
-<table id="inventoryDisplay"></table>
+<div><a href="/reviews/add-review">Write a review</a></div>
+<h2>Reviews</h2>
+<p>Select a vehicle to see reviews for that vehicle</p>
+<%- inventorySelect %>
+<div id="reviewsDisplay"></div>
 <noscript>JavaScript must be enabled to use this page.</noscript>
 
 
-
-<script src="../../js/inventory.js"></script>
+<script src="../../js/reviews.js"></script>
