Update review link placement

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <header id="top-header">
   <span class="siteName">
     <a id="site-title" href="/" title="Return to home page">CSE Motors</a>
+    <a id="review-link" href="/reviews/">Reviews</a>
   </span>
   <div id="tools">
     <%  if (locals.loggedin) { %>
@@ -8,6 +9,5 @@
       <% } else { %>
       <a id="account-login" title="Click to log in" href="/account/login">My Account</a>
       <%} %>
-      
   </div>
 </header>
